--- a/common/theme.css
+++ b/common/theme.css
@@ -1,6 +1,6 @@
 :root {
   --color-primary: #000;
-  --color-secondary: #f2c250;
+  --color-secondary: #f9ee41;
   --color-accent: #ff5a5a;
   --font-primary: "Nunito Sans", sans-serif;
   --font-secondary: "Maven Pro", sans-serif;
@@ -8,4 +8,49 @@
 
 html {
   font-family: var(--font-primary);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-secondary);
+  color: var(--color-primary);
+  font-weight: bold;
+}
+
+a {
+  font-family: var(--font-secondary);
+  color: var(--color-accent);
+  text-decoration: none;
+}
+
+ul,
+li,
+ol,
+dl,
+dd {
+  font-family: var(--font-primary);
+  color: var(--color-accent);
+}
+
+dt {
+  font-family: var(--font-secondary);
+}
+
+blockquote,
+b {
+  font-weight: bold;
+}
+
+cite,
+em,
+i{
+  font-style: italic;
+}
+
+mark {
+  background-color: var(--color-secondary);
 }
