Basic button styling
Basic buttons were styled

--- a/common/theme.css
+++ b/common/theme.css
@@ -2,6 +2,7 @@
   --color-primary: #000;
   --color-secondary: #f9ee41;
   --color-accent: #ff5a5a;
+  --color-accent-light: #f9b8b8;
   --font-primary: "Nunito Sans", sans-serif;
   --font-secondary: "Maven Pro", sans-serif;
 }
