Add the form library
The form library was added

--- a/patterns/buttons/buttons.css
+++ b/patterns/buttons/buttons.css
@@ -1,6 +1,6 @@
 .btn {
   background-color: var(--color-accent);
-  border-color: var(--color-accent);;
+  border-color: var(--color-accent);
 
   color: var(--color-primary);
 }
