Add the pattern library for product page
The banners for product page were added

--- a/patterns/banners/banners.css
+++ b/patterns/banners/banners.css
@@ -1,3 +1,11 @@
+.grey {
+  color: #a9a9a9;
+}
+
+hr {
+  border-top: 1px solid #000;
+}
+
 @media only screen and (min-width: 20em) {
 
   .text-s {
