Change the forms pattern library
The pattern library for forms was changed

--- a/patterns/forms/forms.css
+++ b/patterns/forms/forms.css
@@ -1,27 +1,11 @@
-.flag-optional {
-  color: #999;
-}
-
-.is-validated input:invalid,
-.is-validated input[type="checkbox"]:invalid + label::before {
-  border-color: #f33;
+html {
+  font-family: sans-serif;
 }
 
 .error-message {
-  display: none;
+  display: block;
   background-color: #fee;
   color: var(--color-accent);
-}
-
-.error-message-highlighted {
-  background-color: var(--color-accent);
-  color: #fff;
-}
-
-.is-validated > .error-message:first-child,
-.is-validated input:invalid + .error-message,
-.is-validated input:invalid + label + .error-message {
-  display: block;
 }
 
 label {
