--- a/patterns/banners/banners.css
+++ b/patterns/banners/banners.css
@@ -1,9 +1,34 @@
+html {
+  font-family: sans-serif;
+}
+
 .grey {
   color: #a9a9a9;
 }
 
 hr {
   border-top: 1px solid #000;
+}
+
+.sale-banner {
+  background-color: var(--color-secondary);
+}
+
+.pop-up {
+  position: absolute;
+  top: -10em;
+}
+
+.pop-up-label {
+  cursor: pointer;
+}
+
+.pop-up:checked ~ .sale-banner {
+  display: none;
+}
+
+.pop-up:checked ~ .pop-up-label .close-icon {
+  display: none;
 }
 
 @media only screen and (min-width: 20em) {
