Fix the Indentation errors

--- a/patterns/banners/banners.css
+++ b/patterns/banners/banners.css
@@ -70,7 +70,6 @@ p {
   top: 0;
 }
 
-
 .collection-text {
   top: 7em;
   right: 40%;
@@ -78,15 +77,16 @@ p {
 }
 
 .collection-img:first-child {
-  right: 10%
+  right: 10%;
   top: 2em;
 }
 
 .collection-img:nth-child(2) {
-  right: 20%
+  right: 20%;
   top: 5em;
 }
+
 .collection-img:last-child {
-  left: 30%
+  left: 30%;
   top: 2em;
 }
