--- a/patterns/sections/sections.css
+++ b/patterns/sections/sections.css
@@ -20,7 +20,6 @@ hr {
   top: 0;
 }
 
-
 .collection-text {
   top: 7em;
   right: 40%;
@@ -28,15 +27,16 @@ hr {
 }
 
 .collection-img:first-child {
-  right: 10%
+  right: 10%;
   top: 2em;
 }
 
 .collection-img:nth-child(2) {
-  right: 20%
+  right: 20%;
   top: 5em;
 }
+
 .collection-img:last-child {
-  left: 30%
+  left: 30%;
   top: 2em;
 }
