--- a/common/theme.css
+++ b/common/theme.css
@@ -23,7 +23,7 @@ h6 {
 }
 
 a {
-  font-family: var(--font-secondary);
+  font-family: var(--font-primary);
   color: var(--color-accent);
   text-decoration: none;
 }
