--- a/patterns/banners/banners.css
+++ b/patterns/banners/banners.css
@@ -10,6 +10,10 @@ hr {
   border-top: 1px solid #000;
 }
 
+.banner-img {
+  max-width: 100vw;
+}
+
 .sale-banner {
   background-color: var(--color-secondary);
 }
@@ -35,8 +39,8 @@ hr {
 
   .text-s {
     position: absolute;
-    top: 0;
-    right: 20%;
+    top: 2em;
+    right: 50%;
   }
 
 }
@@ -45,7 +49,7 @@ hr {
 
   .text-m {
     position: absolute;
-    top: 0;
+    top: 2em;
     right: 0;
   }
 
@@ -55,7 +59,7 @@ hr {
 
   .text-l {
     position: absolute;
-    top: 0;
+    top: 2em;
     right: 0;
   }
 
@@ -63,30 +67,4 @@ hr {
 
 p {
   font-family: var(--font-primary);
-}
-
-.main-img {
-  position: relative;
-  top: 0;
-}
-
-.collection-text {
-  top: 7em;
-  right: 40%;
-  z-index: 10;
-}
-
-.collection-img:first-child {
-  right: 10%;
-  top: 2em;
-}
-
-.collection-img:nth-child(2) {
-  right: 20%;
-  top: 5em;
-}
-
-.collection-img:last-child {
-  left: 30%;
-  top: 2em;
 }
