--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -1,6 +1,17 @@
+.header {
+  max-height: 100px;
+  width: 100vw;
+}
+
+.navigation {
+  position: relative;
+  height: 50vh;
+  z-index: 10;
+}
+
 .nav {
+  width: 100vw;
   display: none;
-  height: 100vh;
 }
 
 .nav-check {
@@ -15,8 +26,6 @@
 .nav-check:checked ~ .nav {
   display: block;
   background-color: var(--color-accent);
-  z-index: 20;
-  height: 100vh;
   overflow: hidden;
 }
 
@@ -24,12 +33,12 @@
   display: none;
 }
 
-a {
+.yellow {
   color: var(--color-secondary);
 }
 
-a:hover {
-  color: #fff;
+.yellow:hover {
+  color: var(--color-primary);
 }
 
 .nav-check:checked ~ .nav-label .open {
