--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -1,12 +1,12 @@
 .header {
-  max-height: 100px;
   width: 100vw;
 }
 
 .navigation {
-  position: relative;
+  position: absolute;
   height: 50vh;
   z-index: 10;
+  width: 100%;
 }
 
 .nav {
