--- a/patterns/sections/sections.css
+++ b/patterns/sections/sections.css
@@ -50,16 +50,42 @@ hr {
   display: none;
 }
 
-.filter-option-1:hover  .dropdown-content-brand {
-  display: block;
+
+.brand-check,
+.type-check {
   position: absolute;
-  top: 5em;
+  top: -10em;
+}
+
+.brand-label,
+.type-label {
+  cursor: pointer;
+}
+
+.brand-check:checked ~ .dropdown-content-brand {
+  position: absolute;
+  z-index: 10;
+  display: block;
   background-color: #fff;
 }
 
-.filter-option-2:hover  .dropdown-content-type {
+.type-check:checked ~ .dropdown-content-type {
+  position: absolute;
+  z-index: 10;
+  display: block;
+  background-color: #fff;
+}
+
+/* .filter-option-1:hover  .dropdown-content-brand {
   display: block;
   position: absolute;
   top: 5em;
   background-color: #fff;
-}
+} */
+
+/* .filter-option-2:hover  .dropdown-content-type {
+  display: block;
+  position: absolute;
+  top: 5em;
+  background-color: #fff;
+} */
