Add skip links to the pages
Skip links were added for accessibility

--- a/patterns/header/header.css
+++ b/patterns/header/header.css
@@ -51,3 +51,12 @@
 .current {
   text-decoration: underline;
 }
+
+.skip-links a {
+  position: absolute;
+  top: -10em;
+}
+
+.skip-links a:focus {
+  top: 0;
+}
