--- a/patterns/forms/forms.css
+++ b/patterns/forms/forms.css
@@ -2,22 +2,12 @@ html {
   font-family: sans-serif;
 }
 
-.error-message {
-  display: none;
-  background-color: #fee;
-  color: var(--color-accent);
-}
-
 label {
   display: block;
 }
 
 .sa {
   display: inline-block;
-}
-
-input[type="checkbox"]:checked .billing {
-  visibility: hidden;
 }
 
 select,
@@ -30,4 +20,34 @@ input {
 
 fieldset {
   border: none;
+}
+
+html {
+  font-family: sans-serif;
+}
+
+.flag-optional {
+  color: #999;
+}
+
+.is-validated input:invalid,
+.is-validated input[type="checkbox"]:invalid + label::before {
+  border-color: #f33;
+}
+
+.error-message {
+  display: none;
+  background-color: #fee;
+  color: #c33;
+}
+
+.error-message-highlighted {
+  background-color: #c33;
+  color: #fff;
+}
+
+.is-validated > .error-message:first-child,
+.is-validated input:invalid + .error-message,
+.is-validated input:invalid + label + .error-message {
+  display: block;
 }
